Time: 0 ms (100.00%) | Memory: 41 MB (78.85%) - LeetSync